# UdemySaver

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: FUNDING.yml
UdemySaver/: CMakeLists.txt
UdemySaver/src/: main.cpp
UdemySaver/src/server/: HttpServer.cpp  HttpServer.h  RequestHandler.cpp  RequestHandler.h
UdemySaver/utils/: FFmpegHelper.cpp  FFmpegHelper.h  Helper.h
UdemySaver/www/: app.js  index.html  theme.css
UdemySaver/www/lang/: en.json  tr.json
